fixing nav bug on mobile devices

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -106,6 +106,7 @@ body {
 @media (max-width: 765px) {
   .landing-page-header {
     margin-top: 0;
+    overflow: hidden;
   }
 }
 .landing-page-header.-open-nav {
