--- a/src/sass/modules/layout.scss
+++ b/src/sass/modules/layout.scss
@@ -32,6 +32,7 @@ body {
     z-index: 1000;
     @media (max-width: $breakpoint-nav) {
         margin-top: 0;
+        overflow: hidden;
     }
     &.-open-nav {
         overflow: initial;
