--- a/webapp/static/css/styles.css
+++ b/webapp/static/css/styles.css
@@ -128,6 +128,7 @@ body {
 @media (max-width: 765px) {
   .landing-page-header {
     margin-top: 0;
+    overflow: hidden;
   }
 }
 .landing-page-header.-open-nav {
